[tool.poetry]
name = "nextcord"
version = "3.0.0"
description = "A modern, async, and feature-full wrapper for the Discord API, made in Python."
authors = ["vcokltfre <vcokltfre@gmail.com>", "tag-epic <tagepicuwu@gmai.com>"]
license = "MIT"
repository = "https://github.com/nextcord/nextcord-v3"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
