[tool.poetry]
name = "nextcord"
version = "3.0.0"
description = "A modern, async, and feature-full wrapper for the Discord API, made in Python."
authors = ["vcokltfre <vcokltfre@gmail.com>", "tag-epic <epic@duck.com>"]
license = "MIT"
repository = "https://github.com/nextcord/nextcord-v3"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.9"
orjson = {version = ">=3.5.4", optional = true}
aiodns = {version = ">=1.1", optional = true}
Brotli = {version = "^1.0.9", optional = true}
cchardet = {version = "^2.1.7", optional = true}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
pytest = "^6.2.5"
taskipy = "^1.9.0"

[tool.poetry.extras]
speed = ["orjson", "aiodns", "Brotli", "cchardet"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.taskipy.tasks]
lint = "black . && isort --profile black ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
